--- a/src/app/components/website/website-new/website-new.component.html
+++ b/src/app/components/website/website-new/website-new.component.html
@@ -45,7 +45,7 @@
         </div>
     </div>
     <nav class="navbar navbar-fixed-bottom bg-primary">
-        <a [routerLink]="['/user/:uid']">
+        <a [routerLink]="['/user', userId]">
             <span class="navbar-brand pull-right bg-primary glyphicon glyphicon-user"></span>
         </a>
     </nav>
