--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -52,7 +52,7 @@
     </div>
 
     <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
-        <a [routerLink]="['/user/:uid']" class="navbar-brand pull-right">
+        <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
             <span class="text-primary glyphicon glyphicon-user"></span>
         </a>
     </nav>
