--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -11,7 +11,7 @@
 
 <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-xs-12">
     <div *ngFor="let widget of widgets">
-        <div [ngSwitch]="widget['widgetType']">
+        <div class="widgets" [ngSwitch]="widget['widgetType']">
             <div *ngSwitchCase="'HEADING'">
                 <div class="col-xs-12">
                     <app-widget-view-heading [widget]="widget"></app-widget-view-heading>
@@ -20,7 +20,7 @@
                            class="custom-widget">
                             <span class="glyphicon glyphicon-cog"></span>
                         </a>
-                        <a class="custom-widget">
+                        <a class="custom-widget drag-handle">
                             <span class="glyphicon glyphicon-menu-hamburger dk-text-dark dk-text-dark"></span>
                         </a>
                     </div>
@@ -34,7 +34,7 @@
                            class="custom-widget">
                             <span class="glyphicon glyphicon-cog"></span>
                         </a>
-                        <a class="custom-widget">
+                        <a class="custom-widget drag-handle">
                             <span class="glyphicon glyphicon-menu-hamburger dk-text-dark dk-text-dark"></span>
                         </a>
                     </div>
@@ -48,7 +48,7 @@
                            class="custom-widget">
                             <span class="glyphicon glyphicon-cog"></span>
                         </a>
-                        <a class="custom-widget">
+                        <a class="custom-widget drag-handle">
                             <span class="glyphicon glyphicon-menu-hamburger dk-text-dark dk-text-dark"></span>
                         </a>
                     </div>
@@ -58,13 +58,13 @@
     </div>
 </div>
 <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-    <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']" class="navbar-brand">
+    <a [routerLink]="['/user', userId, 'website', websiteId, 'page', pageId, 'widget']" class="navbar-brand">
         <span class="glyphicon glyphicon-play"></span>
     </a>
-    <a [routerLink]="['/user/:uid/website/:wid/page/:pid/widget']" class="navbar-brand">
+    <a [routerLink]="['/user', userId, 'website', websiteId, 'page', pageId, 'widget']" class="navbar-brand">
         <span class="glyphicon glyphicon-eye-open"></span>
     </a>
-    <a [routerLink]="['/user/:uid']" class="navbar-brand pull-right">
+    <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
         <span class="glyphicon glyphicon-user text-primary"></span>
     </a>
 </nav>
