--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -7,10 +7,11 @@
     </div>
 </nav>
 <div class="container-fluid dk-fixed-bottom-navbar-padding dk-fixed-top-navbar-padding">
+    <div *ngIf="msgFlag" class="alert alert-danger">{{message}}</div>
     <form class="form-group" #f="ngForm">
         <label for="username">Username</label>
-        <input [(ngModel)]="username" name="username" type="text" class="form-control dk-lower-margin" id="username"
-               placeholder="Alice" disabled="true">
+        <input [(ngModel)]="user['username']" name="username" type="text" class="form-control dk-lower-margin"
+               id="username" placeholder="Alice" disabled="true">
         <label for="email">Email address</label>
         <input [(ngModel)]="user['email']" name="email" type="email" class="form-control dk-lower-margin" id="email"
                placeholder="alice.wonderland@unicorn.com">
