temporary commit to switch branches

--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-app="HelloWorldDirective">
     <div *ngIf="errorFlag" class="alert alert-danger">{{errorMsg}}</div>
     <h1>Login</h1>
     <form (ngSubmit)="login()" #f="ngForm">
