--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -10,7 +10,7 @@
         </a>
     </nav>
     <div class="col-xs-12 dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
-        <form class="form-group">
+        <form class="form-group" ngNoForm action="{{baseUrl}}/api/upload" method="post" enctype="multipart/form-data">
             <label for="widgetname"> Name </label>
             <input class="form-control dk-lower-margin" id="widgetname" name="widgetname" [(ngModel)] = "widgetname"
                    placeholder="Name"/>
@@ -27,7 +27,12 @@
                 <span class="input-group-addon">%</span>
             </div>
             <label for="widget-choose-file"> Upload </label>
-            <input type="file" class="form-control btn btn-file dk-lower-margin" id="widget-choose-file">
+            <input name="myFile" type="file" class="form-control btn btn-file dk-lower-margin" id="widget-choose-file">
+            <input  name="widgetId" value="{{widgetId}}"   style="display: none"/>
+            <input  name="websiteId" value="{{websiteId}}"   style="display: none"/>
+            <input  name="pageId" value="{{pageId}}"   style="display: none"/>
+            <input  name="userId" value="{{userId}}"   style="display: none"/>
+            <button type="submit" class="btn btn-block btn-primary">Upload Image</button>
             <a [routerLink]="['/user', userId, 'website', websiteId, 'page', pageId, 'widget']" (click)="deleteWidget()"
                class="btn btn-danger form-control">Delete</a>
         </form>
