--- a/src/app/components/widget/widget-list/widget-view-youtube/widget-view-youtube.component.html
+++ b/src/app/components/widget/widget-list/widget-view-youtube/widget-view-youtube.component.html
@@ -1,4 +1,4 @@
-<div class="embed-responsive embed-responsive-16by9">
+<div class="embed-responsive embed-responsive-16by9 youtube-widget">
     <iframe class="e2e-iframe-trusted-src" width="560" height="315" [src]="videoUrl" frameborder="0"
             allowfullscreen></iframe>
 </div>
