--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -8,4 +8,7 @@
     <div *ngSwitchCase="'YOUTUBE'">
         <app-widget-youtube></app-widget-youtube>
     </div>
+    <div *ngSwitchCase="'HTML'">
+        <app-widget-html></app-widget-html>
+    </div>
 </div>
