--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -6,7 +6,7 @@
         </a>
         <b class="navbar-brand dk-no-side-padding dk-no-margin"> Edit Widget </b>
         <a class="bg-secondary pull-right navbar-brand" (click)="updateWidget()">
-            <span class="glyphicon glyphicon-ok"></span>
+            <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
     </nav>
     <div class="dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding col-xs-12">
