--- a/src/app/components/widget/widget-edit/widget-edit.component.html
+++ b/src/app/components/widget/widget-edit/widget-edit.component.html
@@ -11,7 +11,7 @@
     <div *ngSwitchCase="'HTML'">
         <app-widget-html></app-widget-html>
     </div>
-    <div *ngSwitchCase="'TEXT'">
+    <div *ngSwitchCase="'INPUT'">
         <app-widget-text></app-widget-text>
     </div>
 </div>
