--- a/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
+++ b/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-default navbar-fixed-top bg-secondary">
         <a class="bg-secondary navbar-brand"
            [routerLink]="['/user', userId, 'website', websiteId, 'page', pageId, 'widget']">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="glyphicon glyphicon-remove"></span>
         </a>
         <b class="navbar-brand dk-no-side-padding dk-no-margin"> Edit Widget </b>
         <a class="bg-secondary pull-right navbar-brand" (click)="updateWidget()">
