--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -6,7 +6,7 @@
         </a>
         <p class="navbar-brand dk-no-side-padding dk-no-margin"><b>Edit Widget</b></p>
         <a class="bg-secondary pull-right navbar-brand" (click)="updateWidget()">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="glyphicon glyphicon-ok"></span>
         </a>
     </nav>
     <div class="col-xs-12 dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
