--- a/src/app/components/widget/widget-choose/widget-choose.component.html
+++ b/src/app/components/widget/widget-choose/widget-choose.component.html
@@ -18,7 +18,7 @@
                 <a (click)="createWidget('HTML')"> HTML </a>
             </li>
             <li class="list-group-item text-primary dk-borderless">
-                <a (click)="createWidget('TEXT')"> Text </a>
+                <a (click)="createWidget('INPUT')"> Text </a>
             </li>
             <li class="list-group-item text-primary dk-borderless">
                 <a href="#"> Link </a>
