widget path updates

--- a/src/app/components/widget/widget-list/widget-view-image/widget-view-image.component.html
+++ b/src/app/components/widget/widget-list/widget-view-image/widget-view-image.component.html
@@ -1,1 +1,1 @@
-<img class="img-responsive center-block" [src]="widget['url']" [style.width.%]="widget['size']">
+<img class="img-responsive center-block" [src]="widget['url']+'.jpg'" [style.width.%]="widget['size']">
