added login logout

--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -25,7 +25,7 @@
     <a class="btn btn-primary btn-block"
        [routerLink]="['website']">Websites</a>
     <a class="btn btn-danger btn-block "
-       [routerLink]="['/login']">Logout</a>
+       (click)="logout()">Logout</a>
 </div>
 <nav class="navbar navbar-fixed-bottom square bg-primary">
     <div class="container-fluid">
