configured login and profile across all pages

--- a/src/app/components/page/page-list/page-list.component.html
+++ b/src/app/components/page/page-list/page-list.component.html
@@ -22,7 +22,7 @@
         </ul>
     </div>
     <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
-        <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
+        <a [routerLink]="['/profile']" class="navbar-brand pull-right">
             <span class="text-primary glyphicon glyphicon-user"></span>
         </a>
     </nav>
