--- a/src/app/components/page/page-new/page-new.component.html
+++ b/src/app/components/page/page-new/page-new.component.html
@@ -52,7 +52,7 @@
 
     <nav class="navbar navbar-default navbar-fixed-bottom bg-secondary">
         <div class="container-fluid col-xs-1 col-xs-offset-11">
-            <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
+            <a [routerLink]="['/profile']" class="navbar-brand pull-right">
                 <span class="text-primary glyphicon glyphicon-user"></span>
             </a>
         </div>
