--- a/src/app/components/website/website-edit/website-edit.component.html
+++ b/src/app/components/website/website-edit/website-edit.component.html
@@ -49,7 +49,7 @@
     </div>
 
     <nav class="navbar navbar-fixed-bottom bg-primary">
-        <a [routerLink]="['/user', userId]">
+        <a [routerLink]="['/profile']">
             <span class="navbar-brand pull-right bg-primary glyphicon glyphicon-user"></span>
         </a>
     </nav>
