--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -21,7 +21,7 @@
         </ul>
     </div>
     <nav class="navbar navbar-fixed-bottom square bg-primary">
-        <a [routerLink]="['/user', userId]">
+        <a [routerLink]="['/profile']">
             <span class="navbar-brand glyphicon glyphicon-user pull-right bg-primary"></span>
         </a>
     </nav>
