--- a/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
+++ b/src/app/components/widget/widget-edit/widget-header/widget-header.component.html
@@ -25,7 +25,7 @@
         </form>
     </div>
     <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-        <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
+        <a [routerLink]="['/profile']" class="navbar-brand pull-right">
             <span class="glyphicon glyphicon-user text-primary"></span>
         </a>
     </nav>
