--- a/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
+++ b/src/app/components/widget/widget-edit/widget-html/widget-html.component.html
@@ -19,7 +19,7 @@
            class="btn btn-danger form-control dk-top-margin">Delete</a>
     </div>
     <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-        <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
+        <a [routerLink]="['/profile']" class="navbar-brand pull-right">
             <span class="glyphicon glyphicon-user text-primary"></span>
         </a>
     </nav>
