--- a/src/app/components/widget/widget-list/widget-list.component.html
+++ b/src/app/components/widget/widget-list/widget-list.component.html
@@ -92,7 +92,7 @@
     <a [routerLink]="['/user', userId, 'website', websiteId, 'page', pageId, 'widget']" class="navbar-brand">
         <span class="glyphicon glyphicon-eye-open"></span>
     </a>
-    <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
+    <a [routerLink]="['/profile']" class="navbar-brand pull-right">
         <span class="glyphicon glyphicon-user text-primary"></span>
     </a>
 </nav>
