--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top bg-primary">
     <div class="col-xs-12">
         <p class="dk-no-margin navbar-brand"><b>Profile</b></p>
-        <a class="navbar-brand pull-right" [routerLink]="['/user', userId]" (click)="updateProfile()">
+        <a class="navbar-brand pull-right" [routerLink]="['/profile']" (click)="updateProfile()">
             <span class="glyphicon glyphicon-ok bg-primary"></span>
         </a>
     </div>
@@ -29,7 +29,7 @@
 </div>
 <nav class="navbar navbar-fixed-bottom square bg-primary">
     <div class="container-fluid">
-        <a [routerLink]="['/user', userId]">
+        <a [routerLink]="['/profile']">
             <span class="navbar-brand glyphicon glyphicon-user pull-right bg-primary"></span>
         </a>
     </div>
