--- a/src/app/components/widget/widget-choose/widget-choose.component.html
+++ b/src/app/components/widget/widget-choose/widget-choose.component.html
@@ -41,7 +41,7 @@
         </ul>
     </div>
     <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-        <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
+        <a [routerLink]="['/profile']" class="navbar-brand pull-right">
             <span class="glyphicon glyphicon-user text-primary"></span>
         </a>
     </nav>
