--- a/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
+++ b/src/app/components/widget/widget-edit/widget-text/widget-text.component.html
@@ -36,7 +36,7 @@
         <a class="btn btn-danger btn-block" (click)="deleteWidget()">Delete</a>
     </div>
     <nav class="navbar navbar-default bg-secondary navbar-fixed-bottom">
-        <a [routerLink]="['/user', userId]" class="navbar-brand pull-right">
+        <a [routerLink]="['/profile']" class="navbar-brand pull-right">
             <span class="glyphicon glyphicon-user text-primary"></span>
         </a>
     </nav>
