--- a/src/app/components/website/website-list/website-list.component.html
+++ b/src/app/components/website/website-list/website-list.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <nav class="navbar navbar-fixed-top bg-primary col-xs-12">
         <div class=" row">
-            <a class="navbar-brand" [routerLink]="['/user', userId]">
+            <a class="navbar-brand" [routerLink]="['/profile']">
                 <span class="glyphicon glyphicon-chevron-left bg-primary"></span>
             </a>
             <p class="dk-no-margin dk-no-side-padding navbar-brand"><b>Website</b></p>
@@ -21,7 +21,7 @@
         </ul>
     </div>
     <nav class="navbar navbar-fixed-bottom square bg-primary">
-        <a [routerLink]="['/user', userId]">
+        <a [routerLink]="['/profile']">
             <span class="navbar-brand glyphicon glyphicon-user pull-right bg-primary"></span>
         </a>
     </nav>
