added facebook UI and routes

--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -14,5 +14,10 @@
         </span>
         <button class="btn btn-primary btn-block" type="submit" [disabled]="!f.valid">Login</button>
         <button class="btn btn-success btn-block" type="submit" [routerLink]="['/register']">Register</button>
+        <hr>
+        <a href="http://localhost:3100/api/facebook/login" class="btn btn-primary btn-block">
+            <span class="fa fa-facebook"></span>
+            Facebook
+        </a>
     </form>
 </div>
