--- a/src/app/components/page/page-edit/page-edit.component.html
+++ b/src/app/components/page/page-edit/page-edit.component.html
@@ -39,6 +39,7 @@
         </div>
 
         <div class="col-md-8">
+            <div *ngIf="errorFlag" class="alert alert-danger">{{errorMsg}}</div>
             <form class="form-group">
                 <label for="pagename"> Name </label>
                 <input class="form-control dk-lower-margin" id="pagename" name="pagename" value="Lorem Ipsum"
