--- a/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
+++ b/src/app/components/widget/widget-edit/widget-image/widget-image.component.html
@@ -10,6 +10,7 @@
         </a>
     </nav>
     <div class="col-xs-12 dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
+        <div *ngIf="errorFlag" class="alert alert-danger">{{errorMsg}}</div>
         <form class="form-group" ngNoForm action="{{baseUrl}}/api/upload" method="post" enctype="multipart/form-data">
             <label for="widgetname"> Name </label>
             <input class="form-control dk-lower-margin" id="widgetname" name="widgetname" [(ngModel)]="widgetname"
