--- a/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
+++ b/src/app/components/widget/widget-edit/widget-youtube/widget-youtube.component.html
@@ -10,6 +10,7 @@
         </a>
     </nav>
     <div class="container-fluid dk-fixed-top-navbar-padding dk-fixed-bottom-navbar-padding">
+        <div *ngIf="errorFlag" class="alert alert-danger">{{errorMsg}}</div>
         <form class="form-group">
             <label for="widgetname"> Name </label>
             <input class="form-control dk-lower-margin" id="widgetname" name="widgetname" [(ngModel)] = "widgetname"
